[Resolves #TGi34] CSS for buttons on proposal detail header on mobile devices

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -36,14 +36,6 @@
   }
 }
 
-.verify-account {
-  .pending-verification {
-    background: $info-bg;
-    color: $color-info;
-    line-height: $line-height*2;
-  }
-}
-
 .auth-page {
   background: $brand image-url("auth_bg.jpg") no-repeat top center relative;
   background-size: cover;
@@ -75,8 +67,9 @@
 
 .back {
   @media only screen and (max-width: 40em) {
-  width: 100%;
-  margin-bottom: 10px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
 }
 
 .button.float-right ~ .button.float-right {
